Revision history for Perl extension EAV::XS.

0.4.10 Wed Jul  8 23:44:04 UTC 2020
	- add support for DragonFly
	- update IANA database

0.4.9  Sat Jun 27 07:36:30 UTC 2020
	- update IANA database

0.4.8  Wed Jun  3 09:51:22 UTC 2020
	- update IANA database

0.4.7  Thu May 28 12:16:07 UTC 2020
	- update IANA database

0.4.6  Tue Apr  7 10:02:52 UTC 2020
	- added null pointer check for get_* functions

0.4.5  Sat Apr  4 04:11:28 UTC 2020
	- fix build on Windows
	- updated IANA database

0.4.4  Thu Mar 26 22:43:25 UTC 2020
	- added support of OpenBSD

0.4.3  Thu Mar 26 07:50:10 UTC 2020
	- fix build on Solaris with gmake
	- fix build with idnkit in libeav

0.4.2  Wed Mar 25 07:18:08 UTC 2020
	- bug fix setlocale utf-8 in tests 16, 17, 18

0.4.1  Tue Mar 24 17:52:28 UTC 2020
	- bug fix RT #132221: Endless loop in Makefile.PL

0.4.0  Tue Mar 24 15:34:33 UTC 2020
	- new methods have been added (get_lpart, get_domain, etc)
	- updated IANA database
	- added new example email-info.pl

0.3.4  Tue Mar 24 01:08:52 UTC 2020
	- add support for NetBSD
	- update libeav upstream

0.3.3  Mon Mar 23 09:27:27 UTC 2020
	- bug fix RT #132187, thanks to Slaven Rezić (SREZIC)
	- libidn workaround added in t/08-file.t
	- update libeav upstream

0.3.2  Sun Mar 22 10:45:33 UTC 2020
	- bug fix RT #132191, thanks to Slaven Rezić (SREZIC)
	- bug fix RT #132192, thanks to Slaven Rezić (SREZIC)

0.3.1  Sat Mar 21 08:17:43 UTC 2020
	- update module description

0.3.0  Sat Mar 21 03:31:15 UTC 2020
	- update libeav upstream
	- update questions in Makefile.PL

0.2.2  Tue Apr 25 10:11:18 UTC 2017
	- rename error() method to get_error()

0.2.1  Mon Apr 24 16:59:57 UTC 2017
	- added support for RFC 7686 ("onion." domain)
	- added support for rest RFCs: 822, 5321, 5322

0.1.2  Sun Apr 23 02:37:54 UTC 2017
	- update tests
	- update libeav with improved error handling

0.1.1  Sat Apr 22 02:47:41 UTC 2017
	- fix issues when building with shared perl
	- update license information
	- update examples
