@@ -31,6 +31,11 @@ sub myconfigure() {
                 $cfg->{'macro'}->{'LIBEAV_OPTIONS'} .= " CC=$Config{'ccname'}";
             }
         }
+        elsif ($^O eq "cygwin") {
+            $cfg->{'macro'}->{'LIBEAV_MAKEFILE'} = "-f Makefile.windows-gmake";
+            $cfg->{'macro'}->{'LIBEAV_OPTIONS'} .= ' RM="rm -f"';
+            $cfg->{'LD'} = "cc"; # either g++, but need install gcc-g++
+        }
 
         return $cfg;
     }
